--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 .pio
-.vscode/.browse.c_cpp.db*
-.vscode/c_cpp_properties.json
-.vscode/launch.json
-.vscode/ipch
+Firmware/.vscode/.browse.c_cpp.db*
+Firmware/.vscode/c_cpp_properties.json
+Firmware/.vscode/launch.json
+Firmware/.vscode/ipch
 
-platformio.ini
-privateConfig.h
+Firmware/platformio.ini
+Firmware/src/privateConfig.h
 
 
 # temporary excludes
